# INIParser

./: CMakeLists.txt  README.md  main.cpp  settings.ini
utility/: INIParser.cpp  INIParser.h  Value.cpp  Value.h
