cmake_minimum_required(VERSION 3.26)
project(ini)
set(CMAKE_CXX_STANDARD 17)
include_directories(${PROJECT_SOURCE_DIR}/utility)
file(GLOB SRC ${PROJECT_SOURCE_DIR}/utility/*.cpp)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
# add_executable(INIParser main.cpp ${SRC})
add_library(ini STATIC ${SRC})
# add_library(in SHARED ${SRC)